# hexlet-python-testing

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
package-name/: capitalize.py
tests/: test_stack.py
