[project]
name = "hexlet-pytest"
version = "0.1.0"
description = "Example project for learning pytest"
authors = [{name = "Hexlet Team", email = "info@hexlet.io"}]
license = "ISC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 80
